--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <ul class="nav">
         <li><a class="current" href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
-        <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
         <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
@@ -24,7 +23,12 @@
 
   <main>
     <h2>Berries, berries, oh my!</h2>
-    <p>In everday English, "berry" is a term for any <b>samll edible fruit</b>. These "berries" are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+  </main>
+
+  <footer>
+    <small>© Berries.</small>
+  </footer>
 
 </body>
 </html>
