--- a/red-currants.html
+++ b/red-currants.html
@@ -8,5 +8,17 @@
 </head>
 <body>
 
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a class="current" href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
+
 </body>
 </html>
