--- a/blueberries.html
+++ b/blueberries.html
@@ -21,6 +21,12 @@
     </nav>
   </header>
 
+  <main>
+    <h2>Blueberries</h2>
+    <img src="images/blueberries.jpg" alt="Blueberries">
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as "blueberries" and are native to North America.
+  </main>
+
   <footer>
     <small>© Berries.</small>
   </footer>
